--- a/workspace/canvas/flow-view.mdx
+++ b/workspace/canvas/flow-view.mdx
@@ -322,20 +322,11 @@ Identify slow nodes to optimize.
 **Problem:** Don't know what a node does  
 **Solution:** Select it, check Properties Panel for description, or ask Triton.
 
-## Related topics
-
-- [Creating and Connecting Nodes](/workspace/canvas/flow-view/create-connect)
-- [Understanding I/O Nodes](/workspace/canvas/flow-view/io-nodes)
-- [Node Interactions](/workspace/canvas/flow-view/node-interactions)
-- [Flow Basics](/workspace/canvas/flow-view/basics)
-
 ## Next steps
-
-Now that you understand Flow View:
 
 - Practice building a simple Flow
 - Experiment with different patterns (linear, parallel, conditional)
 - Use Triton to generate and modify Flows
 - Review execution traces to understand behavior
-
+- See [Flows concept](/concepts/flows) for deeper understanding
 
