--- a/concepts/agents.mdx
+++ b/concepts/agents.mdx
@@ -12,6 +12,29 @@ description: "LLM logic with prompts and tools; good patterns and observability"
 - Model configuration — Provider/model, temperature, top‑p, max tokens.
 - Toolbox — The set of callable tools made available to the Agent.
 
+## Available Models
+
+Triform supports a wide range of AI models:
+
+**Anthropic:**
+- Claude Haiku 4.5 — Ultra-fast responses, cost-effective for chat
+- Claude Sonnet — Balanced performance and capability
+- Claude Opus — Maximum reasoning power
+
+**Google:**
+- Gemini 3 Pro Preview — Latest flagship with enhanced reasoning
+- Gemini Flash — Fast responses for real-time applications
+
+**OpenAI:**
+- GPT-5.1 — Advanced reasoning and coding
+- GPT-4.1 — Reliable general-purpose model
+
+**Open Source:**
+- Kimi — Default chat model with excellent context handling
+- Various models via Fireworks and other providers
+
+Models are continuously updated. Check the builder for the latest available options.
+
 ## Good patterns
 
 - Keep System Prompts specific and outcome‑oriented.
